# law-rag

./: .gitignore  Cargo.toml
embedding/: Cargo.toml
embedding/src/: chunk.rs  context_model.rs  embeddings.rs  error.rs  html_converter.rs  lib.rs
pipeline/: Cargo.toml
pipeline/src/: html_converter.rs  lib.rs
rag/: Cargo.toml
rag/src/: chunking.rs  chunks.rs  document.rs  document_handler.rs  embedding.rs  error.rs  main.rs  model.rs  pipeline.rs  qdrant.rs  structure.rs  test_doc1.html
systema-client/: Cargo.toml  contents.json  test_doc.json
systema-client/src/: actual_redactions_client.rs  converter.rs  document.rs  encoding.rs  error.rs  html_to_markdown.rs  ibpi_client.rs  lib.rs  logger.rs  models.rs  parser.rs  search_attributes.rs
