[package]
name = "law-rag"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "rag","systema-client"
]
[workspace.dependencies]
candle-core = "0.9.1"
candle-nn ="0.9.1"
candle-transformers = {version = "0.9.1"}
tokenizers = {version ="0.22.2", features = ["http"]}
scraper = "0.25.0"
serde = "1.0.228"
snafu = "0.8.9"
thiserror = "2.0.17"
tracing = "0.1.44"
tokio = {version = "1.48.0", features = ["full"]}
tracing-subscriber = {version = "0.3.22", features = ["std", "fmt", "env-filter"]}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites", features = ["http", "dates"]}
encoding = "0.2.33"
regex = "1.12.2"
qdrant-client = {version = "1.16.0"}
uuid = "1.19.0"