[package]
name = "embedding"
version = "0.1.0"
edition = "2024"

[dependencies]
systema-client = {path = "../systema-client"}
scraper.workspace = true
#text-splitter.workspace = true

#ai
tokenizers.workspace = true
hf-hub.workspace = true
candle-transformers.workspace = true
candle-nn.workspace = true
candle-core.workspace = true
#
tracing.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
utilites.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[profile.test]
inherits = "release"
