[package]
name = "rag"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
scraper.workspace = true
serde.workspace = true
snafu.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
systema-client = {path = "../systema-client"}
utilites.workspace = true
qdrant-client.workspace = true
uuid.workspace = true